--- a/index.html
+++ b/index.html
@@ -7,117 +7,12 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="container">
-        <div class="info-section">
-          <div class="info-content">
-            <div class="contact-info">
-              <ul class="contact-list">
-                <li class="contact-item">
-                  <i class="icon fa-solid fa-phone-flip"></i>
-                  <span class="text">Phone: +8-888-888-8888</span>
-                </li>
-                <li class="contact-item">
-                  <i class="icon fa-regular fa-envelope"></i>
-                  <span class="text">email@petdox.com</span>
-                </li>
-                <li class="contact-item">
-                  <i class="icon fa-regular fa-clock"></i>
-                  <span class="text">Mon - Fri: 10:00 - 17:30</span>
-                </li>
-              </ul>
-            </div>
-
-            <div class="social-icons">
-              <ul class="social-list">
-                <li class="social-item">
-                  <a>
-                    <i class="icon fa-brands fa-facebook-f"></i>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a>
-                    <i class="icon fa-brands fa-x-twitter"></i>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a>
-                    <i class="icon fa-brands fa-google-plus-g"></i>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a>
-                    <i class="icon fa-brands fa-instagram"></i>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a>
-                    <i class="icon fa-brands fa-youtube"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="navbar-section">
-          <div class="navbar-container">
-            <div class="logo-container">
-              <a href="/">
-                <img class="navbar-logo" src="./images/logo.png" alt="logo" />
-              </a>
-            </div>
-            <div class="navbar-burger">
-              <i class="fa-solid fa-bars"></i>
-            </div>
-            <div class="navbar-menu">
-              <ul class="navbar-list">
-                <li class="navbar-item"><a>Home</a></li>
-                <li class="navbar-item"><a href="#about-us">About Us</a></li>
-                <li class="navbar-item"><a>Donate</a></li>
-                <li class="navbar-item"><a>Love Stories</a></li>
-                <li class="navbar-item"><a>Contact Us</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
+    <header>
+      <h1>Welcome to My Simple Page</h1>
     </header>
     <main>
-      <!--About-Us-Block-->
-      <section id="about-us" class="about-us-section">
-        <div class="about-us-container">
-          
-          <div class="about-us-image-container">
-            <img class="about-us-image" src="./images/about-us-dog.jpg" alt="Dog"/>
-          </div>
-
-          <div class="about-us-icon-container">
-            <img class="about-us-icon" src="./images/about-us-icon.png" alt="icon"/>
-          </div>
-
-          <div class="about-us-content">
-            <h3>Про нас</h3>
-            <h2>Познайомтесь з нашим чудовим проєктом допомоги тваринкам</h2>
-            <p>Ласкаво просимо до нашого притулку для тварин – місця, де кожна хвостата 
-              душа знаходить надію та другий шанс на щасливе життя. Ми створені з любов'ю до тварин
-              і прагненням допомогти тим, хто опинився у складних обставинах. Наша команда – це 
-              віддані волонтери та спеціалісти, які щодня працюють над тим, щоб забезпечити нашим 
-              підопічним комфорт, лікування та турботу.</p>
-            <p>Ми віримо, що кожна тварина заслуговує на домівку, де її люблять і цінують. Завдяки 
-              вашій підтримці ми можемо рятувати більше життів, знаходити нові родини для тварин та 
-              навчати суспільство відповідальності до своїх чотирилапих друзів. Разом ми будуємо 
-              світ, у якому кожна тварина відчуває тепло людської доброти.</p>
-              <button>Звʼязатися з нами</button>
-          </div>
-        </div>
-      </section>
-
+      <p>This is a simple HTML page structure.</p>
     </main>
     <script src="js/scripts.js"></script>
-    <script
-      src="https://kit.fontawesome.com/1bcd533024.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
